# example

./: .dockerignore  .gitignore  Dockerfile  README.md  compose copy.yaml  compose.yaml  compose.yml  docker-compose.legacy.yml  manage.py  package.json  pyproject.toml  vite.config.js
core/assets/js/: main.js
core/assets/js/utils/: theme-toggle.js
core/assets/scss/: _messages.scss  main.scss
core/search/templates/search/: search.html
core/static/.vite/: manifest.json
core/templates/: 403.html  403_csrf.html  404.html  500.html  base.html
core/templatetags/: vite.py
core/users/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
core/users/migrations/: 0001_initial.py  0002_user_email_verified_emailverification.py  0003_emailverification_last_resent_at_and_more.py  0004_remove_emailverification_last_resent_at_and_more.py
core/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html  verification_sent.html
core/users/templates/users/email/: verification_email.html
core/utils/: apps.py  views.py
core/utils/templates/utils/: welcome.html
core/utils/templatetags/: vite.py
djazz/: celery.py  urls.py  wsgi.py
djazz/settings/: base copy.py  base.py  dev.py  production.py
scripts/: copy-fonts.js  entrypoint.sh
