[project]
name = "djazz-example"
version = "0.0.1"
description = "A CLI tool for Django development"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    { name = "Azat", email = "info@azat.ai" }
]

dependencies = [
    "celery>=5.4.0",
    "django>=5.0",
    "django-anymail[brevo]",
    "django-celery-beat",
    "django-celery-results",
    "django-environ",
    "django-redis",
    "django-storages[s3]",
    "gunicorn",
    "pillow",
    "psycopg[binary]",
    "wagtail",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar",
]

[project.urls]
Homepage = "https://github.com/djazzcc/example"
Repository = "https://github.com/djazzcc/example"


